--- a/assets/scss/nebula.css
+++ b/assets/scss/nebula.css
@@ -12390,6 +12390,10 @@ footer .right-footer-nav {
   }
 }
 
+.menu-footer li a {
+  color: #753BBD !important;
+}
+
 /*********************************************
                 SINGLE
 *********************************************/
