--- a/assets/scss/nebula.scss
+++ b/assets/scss/nebula.scss
@@ -615,9 +615,14 @@ footer{
         margin-right:10px;
         }
     }
-    
-}
 
+ 
+}
+.menu-footer{
+    li a{
+        color: $primary !important;
+    }
+}
 /*********************************************
                 SINGLE
 *********************************************/
