--- a/assets/scss/nebula.scss
+++ b/assets/scss/nebula.scss
@@ -7,13 +7,35 @@ Para Editar los estilos, buscar mediante el comando CTRL+F: "Main Styles", y edi
 
 @import "bootstrapcustom";
 @import "fonts";
+@import "highlightjs";
 
 
 /**********************************
             GENERAL
 **********************************/
 body{
-    font-family: 'Lato', sans-serif;
+    //font-family: 'Lato', sans-serif;
+    font-family: 'Open Sans', sans-serif;
+}
+pre {
+    margin-top: 0;
+    margin-bottom: 1rem;
+    overflow: auto;
+}
+code.hljs {
+    padding-left: 15px;
+    padding-right: 15px;
+    border-radius: 0.5em;
+}
+.entry-content{
+    h2 {
+        margin-top: 2rem!important;
+        margin-bottom: 1rem!important;
+        font-weight: 700;
+    }
+    h3,h4,h5{
+        font-weight: 700;
+    }
 }
 .gradient-bg{
     background-image: $gradient;
@@ -373,8 +395,8 @@ body{
 .title-section{
     background: #282729;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-    margin-top: 50px;
-    margin-bottom: 40px;
+    margin-top: 20px;
+    margin-bottom: 25px;
     position: relative;
     .title-section-icon{
         top: -21px;
