Images for 404 & 500 errors

--- a/assets/scss/nebula.css
+++ b/assets/scss/nebula.css
@@ -11838,6 +11838,13 @@ code.hljs {
   border-radius: 0.5em;
 }
 
+ul.tags li a {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  margin: 3px;
+}
+
 .entry-content h2, .entry-content .h2 {
   margin-top: 2rem !important;
   margin-bottom: 1rem !important;
@@ -12725,6 +12732,7 @@ footer .right-footer-nav {
 
 .vertical-post-related .post-img-link {
   border-radius: 5px 5px 5px 5px;
+  padding: 70% 0 0 0;
 }
 
 .vertical-post-related img.post-img {
@@ -12736,7 +12744,6 @@ footer .right-footer-nav {
 .vertical-post-related .card-title {
   color: #000000;
   text-decoration: none !important;
-  text-align: center;
 }
 
 .vertical-post-related .card-text {
