--- a/assets/scss/nebula.scss
+++ b/assets/scss/nebula.scss
@@ -27,6 +27,10 @@ code.hljs {
     padding-right: 15px;
     border-radius: 0.5em;
 }
+ul.tags li a{
+    display:flex;
+    margin:3px;
+}
 .entry-content{
     h2 {
         margin-top: 2rem!important;
@@ -724,6 +728,7 @@ footer{
     }
     .post-img-link{
         border-radius: 5px 5px 5px 5px;
+        padding: 70% 0 0 0;
     }
     img.post-img{
         transition: all 0.5s;
@@ -734,7 +739,6 @@ footer{
     .card-title{
         color: #000000;
         text-decoration: none !important;
-        text-align: center;
     }
     .card-text{
         color: #000000;
