--- a/assets/scss/nebula.scss
+++ b/assets/scss/nebula.scss
@@ -753,3 +753,31 @@ footer{
         border: none;
     }
 }
+
+/*******************************************
+                Pagination
+********************************************/
+.page-item.active .page-link, .page-numbers.current {
+    background-color: $primary !important;
+    border-color: $primary !important;
+    color: #fff;
+}
+.page-numbers{
+    padding: 0.375rem 0.75rem;
+    text-decoration:none;
+    &:hover{
+        z-index: 2;
+        color: #5e2f97;
+        background-color: #e9ecef;
+        border-color: #dee2e6;
+    }
+}
+.page-numbers.current{
+    
+    &:hover{
+        z-index: 2;
+        color: white;
+        background-color: #e9ecef;
+        border-color: #dee2e6;
+    }
+}
