--- a/assets/scss/nebula.scss
+++ b/assets/scss/nebula.scss
@@ -757,6 +757,13 @@ footer{
 /*******************************************
                 Pagination
 ********************************************/
+.pagination{
+    display: inline-flex;
+    li{
+        //padding: 0.375rem 0.75rem;
+        display: inline-flex;
+    }
+}
 .page-item.active .page-link, .page-numbers.current {
     background-color: $primary !important;
     border-color: $primary !important;
