--- a/assets/scss/nebula.scss
+++ b/assets/scss/nebula.scss
@@ -523,6 +523,7 @@ ul.tags li a{
     .card-title{
         color: #000000;
         text-decoration: none !important;
+        font-weight: 700;
     }
     .card-text{
         color: #000000;
@@ -739,6 +740,7 @@ footer{
     .card-title{
         color: #000000;
         text-decoration: none !important;
+        font-weight: 700;
     }
     .card-text{
         color: #000000;
