--- a/assets/scss/nebula.scss
+++ b/assets/scss/nebula.scss
@@ -132,15 +132,20 @@ ul.tags li a{
     width: 100%;
     position: absolute;
     top: 0;
+    transition: all 0.2s;
 }
 
 .post-feed img{
     transition: all 0.5s;
 }
 .post-feed:hover img{
-    width: 120%;
-    height: 120%;
+    width: 140%;
+    height: 140%;
 }
+.secondary-card-text.post-feed:hover .overlay-bg{
+    backdrop-filter: blur(8px);
+}
+
 .serif-text{
     font-family: Georgia, 'Times New Roman', Times, serif;
 }
@@ -289,7 +294,12 @@ ul.tags li a{
         padding-top: 0px;
         padding-bottom: 30px;
     }
-   
+    .blur-container{
+        backdrop-filter: blur(23px);
+        padding: 25px;
+        border-radius: 10px;
+        background: rgba(0,0,0,0.5);
+    }
     .container{
         border-radius:10px;
 
@@ -501,8 +511,8 @@ ul.tags li a{
     &:hover{
         box-shadow: 0px 8px 8px rgba(0, 0, 0, 0.30);
         img.post-img{
-            width: 120%;
-            height: 120%;
+            width: 140%;
+            height: 140%;
         }
     }
     .post-img-link{
@@ -590,10 +600,12 @@ footer{
             }
 
             @media (min-width: 576px){
-                right: -5.5% !important;
+               // right: -5.5% !important;
+               display: none;
             }
             @media (min-width: 768px){
                 right: 8% !important;
+                display: block;
             }
             @media (min-width: 992px){
                 right: 18.5% !important;
@@ -678,6 +690,7 @@ footer{
             position: absolute;
             top: 0;
             border-radius: 10px;
+            backdrop-filter: blur(8px);
             @media (max-width: 768px){ 
                 border-radius: 0 !important;
             }
