--- a/style.css
+++ b/style.css
@@ -572,7 +572,8 @@ table {
 /* Widgets
 --------------------------------------------- */
 .widget {
-	margin: 0 0 1.5em;
+	/* margin: 0 0 1.5em; */
+	min-height:40px;
 }
 
 .widget select {
