--- a/assets/scss/nebula.scss
+++ b/assets/scss/nebula.scss
@@ -41,6 +41,24 @@ ul.tags li a{
         font-weight: 700;
     }
 }
+
+.main-menu{
+    display: -webkit-box !important;
+    display: -ms-flexbox !important;
+    display: flex !important;
+    -ms-flex-preferred-size: auto;
+    flex-basis: auto;
+
+    -ms-flex-preferred-size: 100%;
+    flex-basis: 100%;
+    -webkit-box-flex: 1;
+    -ms-flex-positive: 1;
+    flex-grow: 1;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    align-items: center;
+}
+
 .gradient-bg{
     background-image: $gradient;
     background-size: 200% 100%;
