--- a/assets/scss/nebula.scss
+++ b/assets/scss/nebula.scss
@@ -31,6 +31,11 @@ ul.tags li a{
     display:flex;
     margin:3px;
 }
+blockquote{
+    background: ghostwhite;
+    padding: 10px;
+    border-radius: 10px;
+}
 .entry-content{
     h2 {
         margin-top: 2rem!important;
