--- a/style.css
+++ b/style.css
@@ -552,6 +552,10 @@ table {
 .entry-content,
 .entry-summary {
 	margin: 1.5em 0 0;
+	max-width: 800px;
+    	margin-left: auto;
+    	margin-right: auto;
+    	line-height: 1.8;
 }
 
 .page-links {
