--- a/style.css
+++ b/style.css
@@ -524,7 +524,11 @@ img {
 figure {
 	margin: 1em 0;
 }
-
+figcaption{
+	color: #8f8f90;
+    font-size: 0.9em;
+    font-style: italic;
+}
 table {
 	margin: 0 0 1.5em;
 	width: 100%;
